# miniapp-factory-coder

./: README.md  flake.nix
.github/workflows/: cache.yml
example/: flake.nix
nix/: nixos-module.nix  package.nix
rust-app/: Cargo.toml
rust-app/src/: main.rs
rust-app/src/utils/: env.rs  mod.rs  runner.rs
